deployment/dev-fe-deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ep-dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ep-dev
  name: dev-fe-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ep-dev
    #  app.name: ep-dev-fe-app
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ep-dev
        app.name: ep-dev-fe-app
    spec:
      containers:
      - image: 558698503924.dkr.ecr.us-east-1.amazonaws.com/ep/dev-fe-service:2
        imagePullPolicy: Always
        name: ep-dev-fe-app
        ports:
        - containerPort: 30030
