deployment/dev-fe-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: ep-dev
  name: dev-fe-service
spec:
  ports:
    - port: 30030
      targetPort: 30030
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: ep-dev
    app.name: ep-dev-fe-app
