deployment/dev-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ep-dev
  name: ep-dev-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /send
          pathType: Prefix
          backend:
            service:
              name: dev-fe-service
              port:
                number: 30030
